# owl-3d

./: .gitignore  README.md  TSDF_DYNAMIC_FILTERING_GUIDE.md  create_3d_visualization.py  create_3d_visualization_filtered.py  debug_rendering.py  dl3dv_10K_dataloader.py  download.py  download_DL3DV_10k.py  gsplat_sandbox.py  gsplat_visualizer.py  main.py  plucker.py  pyproject.toml  save_individual_frames.py  test_local_dataloader.py  test_s3_dataloader.py  tsdf_demo_megasam.py  tsdf_fusion.py  upload_s3.py
anycam/: Dockerfile  QUICKSTART.md  README_DOCKER.md  USAGE_EXAMPLES.md  VIDEO_COMPARISON_GUIDE.md  VIDEO_TOOLS_GUIDE.md  build_docker.sh  create_comparison_ffmpeg.sh  create_comparison_video.py  create_comparison_video.sh  create_comparison_video_docker.sh  create_simple_video.py  create_simple_video.sh  process_video.sh  process_video_docker.sh  run_docker.sh  test_comparison_workflow.sh  test_installation.sh  test_video_creation.py
datasets/: pyproject.toml  save_individual_frames.py
infinigen/: Dockerfile  manage_jobs.py
infinigen/configs/: high_quality_terrain.gin  local_256GB.gin  monocular_video.gin
infinigen/configs/nature/: base.gin  base_nature.gin
llrm/: Dockerfile  build_docker.sh  environment.yml  install_cuda_packages.sh  install_gsplat.sh
llrm/data/: dataset.py  dl3dv_fold_8_kmeans_input_idx.json  prosess_dl3dv.py  tnt_fold_8_kmeans_input_idx.json
llrm/data/example_data/: mydesk.txt
llrm/model/: camera_utils.py  llrm.py  loss.py  mamba2.py  transformer.py
megasam/: .dockerignore  Dockerfile  evaluate_cod.sh
(+2 files in other folders)
